@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2022 Echo Three, LLC
+// Copyright 2002-2024 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -18,54 +18,67 @@ package com.echothree.control.user.geo.server.command;
 
 import com.echothree.control.user.geo.common.form.GetGeoCodeScopesForm;
 import com.echothree.control.user.geo.common.result.GeoResultFactory;
-import com.echothree.control.user.geo.common.result.GetGeoCodeScopesResult;
 import com.echothree.model.control.geo.server.control.GeoControl;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
+import com.echothree.model.data.geo.server.entity.GeoCodeScope;
+import com.echothree.model.data.geo.server.factory.GeoCodeScopeFactory;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetGeoCodeScopesCommand
-        extends BaseSimpleCommand<GetGeoCodeScopesForm> {
-    
+        extends BaseMultipleEntitiesCommand<GeoCodeScope, GetGeoCodeScopesForm> {
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
-    
+
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.GeoCodeScope.name(), SecurityRoles.List.name())
-                        )))
-                )));
-        
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+                ))
+        ));
+
+        FORM_FIELD_DEFINITIONS = List.of();
     }
-    
+
     /** Creates a new instance of GetGeoCodeScopesCommand */
     public GetGeoCodeScopesCommand(UserVisitPK userVisitPK, GetGeoCodeScopesForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
     @Override
-    protected BaseResult execute() {
+    protected Collection<GeoCodeScope> getEntities() {
         var geoControl = Session.getModelController(GeoControl.class);
-        GetGeoCodeScopesResult result = GeoResultFactory.getGetGeoCodeScopesResult();
-        
-        result.setGeoCodeScopes(geoControl.getGeoCodeScopeTransfers(getUserVisit()));
-        
+
+        return geoControl.getGeoCodeScopes();
+    }
+
+    @Override
+    protected BaseResult getResult(Collection<GeoCodeScope> entities) {
+        var result = GeoResultFactory.getGetGeoCodeScopesResult();
+
+        if(entities != null) {
+            var geoControl = Session.getModelController(GeoControl.class);
+
+            if(session.hasLimit(GeoCodeScopeFactory.class)) {
+                result.setGeoCodeScopeCount(geoControl.countGeoCodeScopes());
+            }
+
+            result.setGeoCodeScopes(geoControl.getGeoCodeScopeTransfers(getUserVisit(), entities));
+        }
+
         return result;
     }
-    
+
 }
