@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2022 Echo Three, LLC
+// Copyright 2002-2024 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -17,40 +17,38 @@
 package com.echothree.control.user.inventory.server.command;
 
 import com.echothree.control.user.inventory.common.form.GetAllocationPrioritiesForm;
-import com.echothree.control.user.inventory.common.result.GetAllocationPrioritiesResult;
 import com.echothree.control.user.inventory.common.result.InventoryResultFactory;
 import com.echothree.model.control.inventory.server.control.InventoryControl;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
+import com.echothree.model.data.inventory.server.entity.AllocationPriority;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetAllocationPrioritiesCommand
-        extends BaseSimpleCommand<GetAllocationPrioritiesForm> {
+        extends BaseMultipleEntitiesCommand<AllocationPriority, GetAllocationPrioritiesForm> {
     
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.AllocationPriority.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                ))
+        ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of();
     }
     
     /** Creates a new instance of GetAllocationPrioritiesCommand */
@@ -59,11 +57,21 @@ public class GetAllocationPrioritiesCommand
     }
 
     @Override
-    protected BaseResult execute() {
+    protected Collection<AllocationPriority> getEntities() {
         var inventoryControl = Session.getModelController(InventoryControl.class);
-        GetAllocationPrioritiesResult result = InventoryResultFactory.getGetAllocationPrioritiesResult();
-        
-        result.setAllocationPriorities(inventoryControl.getAllocationPriorityTransfers(getUserVisit()));
+
+        return inventoryControl.getAllocationPriorities();
+    }
+
+    @Override
+    protected BaseResult getResult(Collection<AllocationPriority> entities) {
+        var result = InventoryResultFactory.getGetAllocationPrioritiesResult();
+
+        if(entities != null) {
+            var inventoryControl = Session.getModelController(InventoryControl.class);
+
+            result.setAllocationPriorities(inventoryControl.getAllocationPriorityTransfers(getUserVisit(), entities));
+        }
 
         return result;
     }
