@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2022 Echo Three, LLC
+// Copyright 2002-2024 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -17,39 +17,45 @@
 package com.echothree.control.user.item.server.command;
 
 import com.echothree.control.user.item.common.form.GetItemDescriptionForm;
-import com.echothree.control.user.item.common.result.GetItemDescriptionResult;
 import com.echothree.control.user.item.common.result.ItemResultFactory;
 import com.echothree.model.control.content.server.logic.ContentLogic;
+import com.echothree.model.control.core.common.ComponentVendors;
+import com.echothree.model.control.core.common.EntityTypes;
+import com.echothree.model.control.core.server.logic.EntityInstanceLogic;
 import com.echothree.model.control.item.server.control.ItemControl;
 import com.echothree.model.control.item.server.logic.ItemDescriptionLogic;
+import com.echothree.model.control.item.server.logic.ItemDescriptionTypeLogic;
+import com.echothree.model.control.item.server.logic.ItemLogic;
 import com.echothree.model.control.party.server.control.PartyControl;
-import com.echothree.model.data.item.server.entity.Item;
 import com.echothree.model.data.item.server.entity.ItemDescription;
 import com.echothree.model.data.item.server.entity.ItemDescriptionType;
-import com.echothree.model.data.party.server.entity.Language;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseSingleEntityCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import com.echothree.util.server.validation.ParameterUtils;
 import java.util.List;
 
 public class GetItemDescriptionCommand
-        extends BaseSimpleCommand<GetItemDescriptionForm> {
-    
+        extends BaseSingleEntityCommand<ItemDescription, GetItemDescriptionForm> {
+
+    // No COMMAND_SECURITY_DEFINITION, anyone may execute this command.
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                new FieldDefinition("ItemDescriptionTypeName", FieldType.ENTITY_NAME, true, null, null),
-                new FieldDefinition("ItemName", FieldType.ENTITY_NAME, true, null, null),
+        FORM_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("ItemDescriptionTypeName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("ItemName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("LanguageIsoName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
+                new FieldDefinition("Key", FieldType.KEY, false, null, null),
+                new FieldDefinition("Guid", FieldType.GUID, false, null, null),
+                new FieldDefinition("Ulid", FieldType.ULID, false, null, null),
                 new FieldDefinition("Referrer", FieldType.URL, false, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of GetItemDescriptionCommand */
@@ -57,51 +63,88 @@ public class GetItemDescriptionCommand
         super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, false);
     }
 
+    private void checkReferrer(final ItemDescriptionType itemDescriptionType) {
+        if(itemDescriptionType.getLastDetail().getCheckContentWebAddress()) {
+            ContentLogic.getInstance().checkReferrer(this, form.getReferrer());
+        }
+    }
+
     @Override
-    protected BaseResult execute() {
+    protected ItemDescription getEntity() {
         var itemControl = Session.getModelController(ItemControl.class);
-        GetItemDescriptionResult result = ItemResultFactory.getGetItemDescriptionResult();
-        String itemName = form.getItemName();
-        Item item = itemControl.getItemByName(itemName);
-        
-        if(item != null) {
-            String itemDescriptionTypeName = form.getItemDescriptionTypeName();
-            ItemDescriptionType itemDescriptionType = itemControl.getItemDescriptionTypeByName(itemDescriptionTypeName);
-            
-            if(itemDescriptionType != null) {
-                var partyControl = Session.getModelController(PartyControl.class);
-                String languageIsoName = form.getLanguageIsoName();
-                Language language = languageIsoName == null ? getPreferredLanguage() : partyControl.getLanguageByIsoName(languageIsoName);
-                
-                if(languageIsoName == null || language != null) {
-                    ItemDescription itemDescription = itemControl.getItemDescription(itemDescriptionType, item, language);
+        ItemDescription itemDescription = null;
+        var itemName = form.getItemName();
+        var itemDescriptionTypeName = form.getItemDescriptionTypeName();
+        var traditionalParameterCount = ParameterUtils.getInstance().countNonNullParameters(itemName, itemDescriptionTypeName);
 
-                    if(itemDescription == null) {
-                        itemDescription = ItemDescriptionLogic.getInstance().searchForItemDescription(itemDescriptionType, item, language, getPartyPK());
-                    }
+        if(traditionalParameterCount == 0 || traditionalParameterCount == 2) {
+            var possibleEntitySpecsCount = EntityInstanceLogic.getInstance().countPossibleEntitySpecs(form);
 
-                    if(itemDescription != null) {
-                        if(itemDescriptionType.getLastDetail().getCheckContentWebAddress()) {
-                            ContentLogic.getInstance().checkReferrer(this, form.getReferrer());
+            // checkReferrer(...) is called separately in the two paths since the first one can be short circuited if
+            // the referrer check fails.
+            if(traditionalParameterCount == 2 && possibleEntitySpecsCount == 0) {
+                var item = ItemLogic.getInstance().getItemByName(this, itemName);
+                var itemDescriptionType = ItemDescriptionTypeLogic.getInstance().getItemDescriptionTypeByName(this, itemDescriptionTypeName);
+
+                if(!hasExecutionErrors()) {
+                    checkReferrer(itemDescriptionType);
+
+                    if(!hasExecutionErrors()) {
+                        var partyControl = Session.getModelController(PartyControl.class);
+                        var languageIsoName = form.getLanguageIsoName();
+                        var language = languageIsoName == null ? getPreferredLanguage() : partyControl.getLanguageByIsoName(languageIsoName);
+
+                        if(languageIsoName == null || language != null) {
+                            itemDescription = itemControl.getItemDescription(itemDescriptionType, item, language);
+
+                            if(itemDescription == null) {
+                                itemDescription = ItemDescriptionLogic.getInstance().searchForItemDescription(itemDescriptionType,
+                                        item, language, getPartyPK());
+                            }
+
+                            if(itemDescription == null) {
+                                addExecutionError(ExecutionErrors.UnknownItemDescription.name(), itemDescriptionTypeName,
+                                        itemName, languageIsoName);
+                            }
+                        } else {
+                            addExecutionError(ExecutionErrors.UnknownLanguageIsoName.name(), languageIsoName);
                         }
-
-                        if(!hasExecutionErrors()) {
-                            result.setItemDescription(itemControl.getItemDescriptionTransfer(getUserVisit(), itemDescription));
-                        }
-                    } else {
-                        addExecutionError(ExecutionErrors.UnknownItemDescription.name(), itemDescriptionTypeName, itemName, languageIsoName);
                     }
-                } else {
-                    addExecutionError(ExecutionErrors.UnknownLanguageIsoName.name(), languageIsoName);
+                }
+            } else if(traditionalParameterCount == 0 && possibleEntitySpecsCount == 1) {
+                var entityInstance = EntityInstanceLogic.getInstance().getEntityInstance(this, form,
+                        ComponentVendors.ECHO_THREE.name(), EntityTypes.ItemDescription.name());
+
+                if(!hasExecutionErrors()) {
+                    itemDescription = itemControl.getItemDescriptionByEntityInstance(entityInstance);
+
+                    checkReferrer(itemDescription.getLastDetail().getItemDescriptionType());
+
+                    if(hasExecutionErrors()) {
+                        itemDescription = null; // pretend that didn't happen.
+                    }
                 }
             } else {
-                addExecutionError(ExecutionErrors.UnknownItemDescriptionTypeName.name(), itemDescriptionTypeName);
+                addExecutionError(ExecutionErrors.InvalidParameterCount.name());
             }
         } else {
-            addExecutionError(ExecutionErrors.UnknownItemName.name(), itemName);
+            addExecutionError(ExecutionErrors.InvalidParameterCount.name());
         }
-        
+
+        return itemDescription;
+    }
+
+    @Override
+    protected BaseResult getResult(ItemDescription itemDescription) {
+        var itemControl = Session.getModelController(ItemControl.class);
+        var result = ItemResultFactory.getGetItemDescriptionResult();
+
+        if(itemDescription != null) {
+            result.setItemDescription(itemControl.getItemDescriptionTransfer(getUserVisit(), itemDescription));
+        }
+
         return result;
     }
-    
+
+
 }
