@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2022 Echo Three, LLC
+// Copyright 2002-2024 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -17,125 +17,124 @@
 package com.echothree.control.user.item.server.command;
 
 import com.echothree.control.user.item.common.form.GetItemDescriptionsForm;
-import com.echothree.control.user.item.common.result.GetItemDescriptionsResult;
 import com.echothree.control.user.item.common.result.ItemResultFactory;
 import com.echothree.model.control.core.common.EventTypes;
-import com.echothree.model.control.item.common.transfer.ItemDescriptionTransfer;
 import com.echothree.model.control.item.server.control.ItemControl;
+import com.echothree.model.control.item.server.logic.ItemLogic;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.party.server.control.PartyControl;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.item.server.entity.Item;
 import com.echothree.model.data.item.server.entity.ItemDescription;
-import com.echothree.model.data.item.server.entity.ItemDescriptionTypeUse;
-import com.echothree.model.data.item.server.entity.ItemDescriptionTypeUseType;
 import com.echothree.model.data.item.server.factory.ItemDescriptionFactory;
-import com.echothree.model.data.party.server.entity.Language;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.model.data.user.server.entity.UserVisit;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetItemDescriptionsCommand
-        extends BaseSimpleCommand<GetItemDescriptionsForm> {
-    
+        extends BaseMultipleEntitiesCommand<ItemDescription, GetItemDescriptionsForm> {
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.ItemDescription.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                ))
+        ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("ItemName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("ItemDescriptionTypeUseTypeName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("LanguageIsoName", FieldType.ENTITY_NAME, false, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of GetItemDescriptionsCommand */
     public GetItemDescriptionsCommand(UserVisitPK userVisitPK, GetItemDescriptionsForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
+    Item item;
+
     @Override
-    protected BaseResult execute() {
+    protected Collection<ItemDescription> getEntities() {
         var itemControl = Session.getModelController(ItemControl.class);
-        GetItemDescriptionsResult result = ItemResultFactory.getGetItemDescriptionsResult();
-        String itemName = form.getItemName();
-        Item item = itemControl.getItemByName(itemName);
-        
-        if(item != null) {
-            String itemDescriptionTypeUseTypeName = form.getItemDescriptionTypeUseTypeName();
-            ItemDescriptionTypeUseType itemDescriptionTypeUseType = itemDescriptionTypeUseTypeName == null ? null : itemControl.getItemDescriptionTypeUseTypeByName(itemDescriptionTypeUseTypeName);
+        Collection<ItemDescription> entities = null;
+        var itemName = form.getItemName();
+
+        item = ItemLogic.getInstance().getItemByName(this, itemName);
+
+        if(!hasExecutionErrors()) {
+            var itemDescriptionTypeUseTypeName = form.getItemDescriptionTypeUseTypeName();
+            var itemDescriptionTypeUseType = itemDescriptionTypeUseTypeName == null ? null : itemControl.getItemDescriptionTypeUseTypeByName(itemDescriptionTypeUseTypeName);
 
             if(itemDescriptionTypeUseTypeName == null || itemDescriptionTypeUseType != null) {
-                UserVisit userVisit = getUserVisit();
-                List<ItemDescriptionTransfer> itemDescriptions = null;
-
-                result.setItem(itemControl.getItemTransfer(userVisit, item));
-
                 if(itemDescriptionTypeUseType == null) {
                     if(form.getLanguageIsoName() == null) {
-                        if(session.hasLimit(ItemDescriptionFactory.class)) {
-                            result.setItemDescriptionCount(itemControl.countItemDescriptionsByItem(item));
-                        }
-
-                        itemDescriptions = itemControl.getItemDescriptionTransfersByItem(userVisit, item);
+                        entities = itemControl.getItemDescriptionsByItem(item);
                     } else {
                         addExecutionError(ExecutionErrors.InvalidParameterCombination.name());
                     }
                 } else {
                     var partyControl = Session.getModelController(PartyControl.class);
-                    String languageIsoName = form.getLanguageIsoName();
-                    Language language = languageIsoName == null ? getPreferredLanguage() : partyControl.getLanguageByIsoName(languageIsoName);
+                    var languageIsoName = form.getLanguageIsoName();
+                    var language = languageIsoName == null ? getPreferredLanguage() : partyControl.getLanguageByIsoName(languageIsoName);
 
                     if(languageIsoName == null || language != null) {
-                        List<ItemDescriptionTypeUse> itemDescriptionTypeUses = itemControl.getItemDescriptionTypeUsesByItemDescriptionTypeUseType(itemDescriptionTypeUseType);
+                        var itemDescriptionTypeUses = itemControl.getItemDescriptionTypeUsesByItemDescriptionTypeUseType(itemDescriptionTypeUseType);
 
-                        itemDescriptions = new ArrayList<>();
+                        entities = new ArrayList<>();
 
                         for(var itemDescriptionTypeUse : itemDescriptionTypeUses) {
-                            ItemDescription itemDescription = itemControl.getBestItemDescription(itemDescriptionTypeUse.getItemDescriptionType(), item, language);
+                            var itemDescription = itemControl.getBestItemDescription(itemDescriptionTypeUse.getItemDescriptionType(), item, language);
 
                             if(itemDescription != null) {
-                                itemDescriptions.add(itemControl.getItemDescriptionTransfer(userVisit, itemDescription));
+                                entities.add(itemDescription);
                             }
                         }
                     } else {
                         addExecutionError(ExecutionErrors.UnknownLanguageIsoName.name(), languageIsoName);
                     }
                 }
-
-                if(!hasExecutionErrors()) {
-                    result.setItemDescriptions(itemDescriptions);
-
-                    sendEventUsingNames(item.getPrimaryKey(), EventTypes.READ.name(), null, null, getPartyPK());
-                }
             } else {
                 addExecutionError(ExecutionErrors.UnknownItemDescriptionTypeUseTypeName.name(), itemDescriptionTypeUseTypeName);
             }
-        } else {
-            addExecutionError(ExecutionErrors.UnknownItemName.name(), itemName);
         }
-        
+
+        return entities;
+    }
+
+    @Override
+    protected BaseResult getResult(Collection<ItemDescription> entities) {
+        var result = ItemResultFactory.getGetItemDescriptionsResult();
+
+        if(entities != null) {
+            var itemControl = Session.getModelController(ItemControl.class);
+            var userVisit = getUserVisit();
+
+            if(session.hasLimit(ItemDescriptionFactory.class)) {
+                result.setItemDescriptionCount(itemControl.countItemDescriptionsByItem(item));
+            }
+
+            result.setItem(itemControl.getItemTransfer(userVisit, item));
+            result.setItemDescriptions(itemControl.getItemDescriptionTransfers(userVisit, entities));
+        }
+
         return result;
     }
-    
+
 }
