@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2022 Echo Three, LLC
+// Copyright 2002-2024 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -17,41 +17,68 @@
 package com.echothree.control.user.item.server.command;
 
 import com.echothree.control.user.item.common.form.GetItemPriceTypesForm;
-import com.echothree.control.user.item.common.result.GetItemPriceTypesResult;
 import com.echothree.control.user.item.common.result.ItemResultFactory;
 import com.echothree.model.control.item.server.control.ItemControl;
+import com.echothree.model.control.party.common.PartyTypes;
+import com.echothree.model.control.security.common.SecurityRoleGroups;
+import com.echothree.model.control.security.common.SecurityRoles;
+import com.echothree.model.data.item.server.entity.ItemPriceType;
+import com.echothree.model.data.item.server.factory.ItemPriceTypeFactory;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.CommandSecurityDefinition;
+import com.echothree.util.server.control.PartyTypeDefinition;
+import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 
 public class GetItemPriceTypesCommand
-        extends BaseSimpleCommand<GetItemPriceTypesForm> {
-    
+        extends BaseMultipleEntitiesCommand<ItemPriceType, GetItemPriceTypesForm> {
+
+    private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                        new SecurityRoleDefinition(SecurityRoleGroups.ItemPriceType.name(), SecurityRoles.List.name())
+                )))
+        )));
+
+        FORM_FIELD_DEFINITIONS = List.of(
+        );
     }
-    
+
     /** Creates a new instance of GetItemPriceTypesCommand */
     public GetItemPriceTypesCommand(UserVisitPK userVisitPK, GetItemPriceTypesForm form) {
-        super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, true);
+        super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
     @Override
-    protected BaseResult execute() {
+    protected Collection<ItemPriceType> getEntities() {
         var itemControl = Session.getModelController(ItemControl.class);
-        GetItemPriceTypesResult result = ItemResultFactory.getGetItemPriceTypesResult();
-        
-        result.setItemPriceTypes(itemControl.getItemPriceTypeTransfers(getUserVisit()));
-        
+
+        return itemControl.getItemPriceTypes();
+    }
+
+    @Override
+    protected BaseResult getResult(Collection<ItemPriceType> entities) {
+        var result = ItemResultFactory.getGetItemPriceTypesResult();
+        var itemControl = Session.getModelController(ItemControl.class);
+
+        if(session.hasLimit(ItemPriceTypeFactory.class)) {
+            result.setItemPriceTypeCount(itemControl.countItemPriceTypes());
+        }
+
+        result.setItemPriceTypes(itemControl.getItemPriceTypeTransfers(getUserVisit(), entities));
+
         return result;
     }
-    
+
 }
