@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2022 Echo Three, LLC
+// Copyright 2002-2024 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -17,10 +17,10 @@
 package com.echothree.control.user.offer.server.command;
 
 import com.echothree.control.user.offer.common.form.GetOfferItemsForm;
-import com.echothree.control.user.offer.common.result.GetOfferItemsResult;
 import com.echothree.control.user.offer.common.result.OfferResultFactory;
 import com.echothree.model.control.offer.server.control.OfferControl;
 import com.echothree.model.control.offer.server.control.OfferItemControl;
+import com.echothree.model.control.offer.server.logic.OfferLogic;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
@@ -28,9 +28,7 @@ import com.echothree.model.data.offer.server.entity.Offer;
 import com.echothree.model.data.offer.server.entity.OfferItem;
 import com.echothree.model.data.offer.server.factory.OfferItemFactory;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.model.data.user.server.entity.UserVisit;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
@@ -38,9 +36,7 @@ import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class GetOfferItemsCommand
@@ -50,16 +46,16 @@ public class GetOfferItemsCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.OfferItem.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                ))
+        ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("OfferName", FieldType.ENTITY_NAME, true, null, 20L)
-                ));
+        );
     }
     
     /** Creates a new instance of GetOfferItemsCommand */
@@ -71,30 +67,27 @@ public class GetOfferItemsCommand
     
     @Override
     protected Collection<OfferItem> getEntities() {
-        var offerControl = Session.getModelController(OfferControl.class);
-        String offerName = form.getOfferName();
         Collection<OfferItem> offerItems = null;
-        
-        offer = offerControl.getOfferByName(offerName);
-        
-        if(offer != null) {
+
+        offer = OfferLogic.getInstance().getOfferByName(this, form.getOfferName());
+
+        if(!hasExecutionErrors()) {
             var offerItemControl = Session.getModelController(OfferItemControl.class);
+
             offerItems = offerItemControl.getOfferItemsByOffer(offer);
-        } else {
-            addExecutionError(ExecutionErrors.UnknownOfferName.name(), offerName);
         }
-        
+
         return offerItems;
     }
     
     @Override
-    protected BaseResult getTransfers(Collection<OfferItem> entities) {
-        GetOfferItemsResult result = OfferResultFactory.getGetOfferItemsResult();
+    protected BaseResult getResult(Collection<OfferItem> entities) {
+        var result = OfferResultFactory.getGetOfferItemsResult();
         
         if(entities != null) {
             var offerControl = Session.getModelController(OfferControl.class);
             var offerItemControl = Session.getModelController(OfferItemControl.class);
-            UserVisit userVisit = getUserVisit();
+            var userVisit = getUserVisit();
             
             if(session.hasLimit(OfferItemFactory.class)) {
                 result.setOfferItemCount(offerItemControl.countOfferItemsByOffer(offer));
