@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2022 Echo Three, LLC
+// Copyright 2002-2024 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -17,26 +17,21 @@
 package com.echothree.control.user.order.server.command;
 
 import com.echothree.control.user.order.common.form.CreateOrderTimeTypeForm;
-import com.echothree.model.control.order.server.control.OrderTimeControl;
-import com.echothree.model.control.order.server.control.OrderTypeControl;
+import com.echothree.control.user.order.common.result.OrderResultFactory;
+import com.echothree.model.control.order.server.logic.OrderTimeTypeLogic;
+import com.echothree.model.control.order.server.logic.OrderTypeLogic;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.order.server.entity.OrderTimeType;
-import com.echothree.model.data.order.server.entity.OrderType;
-import com.echothree.model.data.party.common.pk.PartyPK;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
-import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class CreateOrderTimeTypeCommand
@@ -46,20 +41,20 @@ public class CreateOrderTimeTypeCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
-                    new SecurityRoleDefinition(SecurityRoleGroups.OrderTimeType.name(), SecurityRoles.Create.name())
-                    )))
-                )));
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.OrderTimeType.name(), SecurityRoles.Create.name())
+                ))
+        ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("OrderTypeName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("OrderTimeTypeName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("IsDefault", FieldType.BOOLEAN, true, null, null),
                 new FieldDefinition("SortOrder", FieldType.SIGNED_INTEGER, true, null, null),
-                new FieldDefinition("Description", FieldType.STRING, false, 1L, 80L)
-                ));
+                new FieldDefinition("Description", FieldType.STRING, false, 1L, 132L)
+        );
     }
     
     /** Creates a new instance of CreateOrderTimeTypeCommand */
@@ -69,34 +64,29 @@ public class CreateOrderTimeTypeCommand
     
     @Override
     protected BaseResult execute() {
-        var orderTypeControl = Session.getModelController(OrderTypeControl.class);
+        var result = OrderResultFactory.getCreateOrderTimeTypeResult();
         var orderTypeName = form.getOrderTypeName();
-        var orderType = orderTypeControl.getOrderTypeByName(orderTypeName);
+        var orderType = OrderTypeLogic.getInstance().getOrderTypeByName(this, orderTypeName);
+        OrderTimeType orderTimeType = null;
 
-        if(orderType != null) {
-            var orderTimeControl = Session.getModelController(OrderTimeControl.class);
-            String orderTimeTypeName = form.getOrderTimeTypeName();
-            OrderTimeType orderTimeType = orderTimeControl.getOrderTimeTypeByName(orderType, orderTimeTypeName);
+        if(!hasExecutionErrors()) {
+            var orderTimeTypeName = form.getOrderTimeTypeName();
+            var isDefault = Boolean.valueOf(form.getIsDefault());
+            var sortOrder = Integer.valueOf(form.getSortOrder());
+            var description = form.getDescription();
+            var partyPK = getPartyPK();
 
-            if(orderTimeType == null) {
-                var partyPK = getPartyPK();
-                var isDefault = Boolean.valueOf(form.getIsDefault());
-                var sortOrder = Integer.valueOf(form.getSortOrder());
-                var description = form.getDescription();
-
-                orderTimeType = orderTimeControl.createOrderTimeType(orderType, orderTimeTypeName, isDefault, sortOrder, partyPK);
-
-                if(description != null) {
-                    orderTimeControl.createOrderTimeTypeDescription(orderTimeType, getPreferredLanguage(), description, partyPK);
-                }
-            } else {
-                addExecutionError(ExecutionErrors.DuplicateOrderTimeTypeName.name(), orderTypeName, orderTimeTypeName);
-            }
-        } else {
-            addExecutionError(ExecutionErrors.UnknownOrderTypeName.name(), orderTypeName);
+            orderTimeType = OrderTimeTypeLogic.getInstance().createOrderTimeType(this, orderType, orderTimeTypeName,
+                    isDefault, sortOrder, getPreferredLanguage(), description, partyPK);
         }
 
-        return null;
+        if(orderTimeType != null) {
+            result.setEntityRef(orderType.getPrimaryKey().getEntityRef());
+            result.setOrderTypeName(orderType.getLastDetail().getOrderTypeName());
+            result.setOrderTimeTypeName(orderTimeType.getLastDetail().getOrderTimeTypeName());
+        }
+
+        return result;
     }
     
 }
