@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2022 Echo Three, LLC
+// Copyright 2002-2024 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -17,80 +17,112 @@
 package com.echothree.control.user.party.server.command;
 
 import com.echothree.control.user.party.common.form.GetPartyAliasForm;
-import com.echothree.control.user.party.common.result.GetPartyAliasResult;
 import com.echothree.control.user.party.common.result.PartyResultFactory;
 import com.echothree.control.user.party.server.command.util.PartyAliasUtil;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.party.server.control.PartyControl;
+import com.echothree.model.control.party.server.logic.PartyAliasTypeLogic;
+import com.echothree.model.control.party.server.logic.PartyLogic;
 import com.echothree.model.control.security.common.SecurityRoles;
-import com.echothree.model.data.party.server.entity.Party;
 import com.echothree.model.data.party.server.entity.PartyAlias;
-import com.echothree.model.data.party.server.entity.PartyAliasType;
-import com.echothree.model.data.party.server.entity.PartyType;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseSingleEntityCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class GetPartyAliasCommand
-        extends BaseSimpleCommand<GetPartyAliasForm> {
+        extends BaseSingleEntityCommand<PartyAlias, GetPartyAliasForm> {
     
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                new FieldDefinition("PartyName", FieldType.ENTITY_NAME, true, null, null),
-                new FieldDefinition("PartyAliasTypeName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+        FORM_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("PartyName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("PartyTypeName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("PartyAliasTypeName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("Alias", FieldType.ENTITY_NAME, false, null, null)
+        );
     }
     
     /** Creates a new instance of GetPartyAliasCommand */
     public GetPartyAliasCommand(UserVisitPK userVisitPK, GetPartyAliasForm form) {
-        super(userVisitPK, form, new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        super(userVisitPK, form, new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
-                        new SecurityRoleDefinition(PartyAliasUtil.getInstance().getSecurityRoleGroupNameByPartySpec(form), SecurityRoles.Review.name())
-                        )))
-                ))), FORM_FIELD_DEFINITIONS, false);
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(PartyAliasUtil.getInstance().getSecurityRoleGroupNameBySpecs(form, form), SecurityRoles.Review.name())
+                ))
+        )), FORM_FIELD_DEFINITIONS, false);
     }
-    
+
     @Override
-    protected BaseResult execute() {
-        var partyControl = Session.getModelController(PartyControl.class);
-        GetPartyAliasResult result = PartyResultFactory.getGetPartyAliasResult();
-        String partyName = form.getPartyName();
-        Party party = partyControl.getPartyByName(partyName);
+    protected PartyAlias getEntity() {
+        var partyName = form.getPartyName();
+        var partyTypeName = form.getPartyTypeName();
+        var partyAliasTypeName = form.getPartyAliasTypeName();
+        var alias = form.getAlias();
+        // Must specify either PartyName + PartyAliasTypeName or PartyTypeName + PartyAliasTypeName + Alias
+        var parameterOption1 = (partyName != null) && (partyTypeName == null) && (partyAliasTypeName != null ) && (alias == null);
+        var parameterOption2 = (partyName == null) && (partyTypeName != null) && (partyAliasTypeName != null ) && (alias != null);
+        var parameterCount = (parameterOption1 ? 1 : 0) + (parameterOption2 ? 1 : 0);
+        PartyAlias partyAlias = null;
 
-        if(party != null) {
-            PartyType partyType = party.getLastDetail().getPartyType();
-            String partyAliasTypeName = form.getPartyAliasTypeName();
-            PartyAliasType partyAliasType = partyControl.getPartyAliasTypeByName(partyType, partyAliasTypeName);
+        if(parameterCount == 1) {
+            var partyControl = Session.getModelController(PartyControl.class);
 
-            if(partyAliasType != null) {
-                PartyAlias partyAlias = partyControl.getPartyAlias(party, partyAliasType);
+            if(parameterOption1) {
+                var party = PartyLogic.getInstance().getPartyByName(this, partyName);
 
-                if(partyAlias != null) {
-                    result.setPartyAlias(partyControl.getPartyAliasTransfer(getUserVisit(), partyAlias));
-                } else {
-                    addExecutionError(ExecutionErrors.UnknownPartyAlias.name(), partyName, partyAliasTypeName);
+                if(!hasExecutionErrors()) {
+                    var partyType = party.getLastDetail().getPartyType();
+                    var partyAliasType = PartyAliasTypeLogic.getInstance().getPartyAliasTypeByName(this, partyType, partyAliasTypeName);
+
+                    if(!hasExecutionErrors()) {
+                        partyAlias = partyControl.getPartyAlias(party, partyAliasType);
+
+                        if(partyAlias == null) {
+                            addExecutionError(ExecutionErrors.UnknownPartyAlias.name(), party.getLastDetail().getPartyName(),
+                                    partyAliasType.getLastDetail().getPartyAliasTypeName());
+                        }
+                    }
                 }
             } else {
-                addExecutionError(ExecutionErrors.UnknownPartyAliasTypeName.name(), partyType.getPartyTypeName(), partyAliasTypeName);
+                var partyAliasType = PartyAliasTypeLogic.getInstance().getPartyAliasTypeByName(this, partyTypeName, partyAliasTypeName);
+
+                if(!hasExecutionErrors()) {
+                    partyAlias = partyControl.getPartyAliasByAlias(partyAliasType, alias);
+
+                    if(partyAlias == null) {
+                        var partyAliasTypeDetail = partyAliasType.getLastDetail();
+                        addExecutionError(ExecutionErrors.UnknownPartyAliasByAlias.name(), partyAliasTypeDetail.getPartyType().getPartyTypeName(),
+                                partyAliasTypeDetail.getPartyAliasTypeName(), partyAliasType.getLastDetail().getPartyAliasTypeName(), alias);
+                    }
+                }
             }
         } else {
-            addExecutionError(ExecutionErrors.UnknownPartyName.name(), partyName);
+            addExecutionError(ExecutionErrors.InvalidParameterCount.name());
+        }
+
+        return partyAlias;
+    }
+
+    @Override
+    protected BaseResult getResult(PartyAlias partyAlias) {
+        var result = PartyResultFactory.getGetPartyAliasResult();
+
+        if(partyAlias != null) {
+            var partyControl = Session.getModelController(PartyControl.class);
+
+            result.setPartyAlias(partyControl.getPartyAliasTransfer(getUserVisit(), partyAlias));
         }
 
         return result;
     }
-    
+
 }
