@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2022 Echo Three, LLC
+// Copyright 2002-2024 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -17,66 +17,117 @@
 package com.echothree.control.user.party.server.command;
 
 import com.echothree.control.user.party.common.form.GetPartyAliasesForm;
-import com.echothree.control.user.party.common.result.GetPartyAliasesResult;
 import com.echothree.control.user.party.common.result.PartyResultFactory;
 import com.echothree.control.user.party.server.command.util.PartyAliasUtil;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.party.server.control.PartyControl;
+import com.echothree.model.control.party.server.logic.PartyAliasTypeLogic;
+import com.echothree.model.control.party.server.logic.PartyLogic;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.party.server.entity.Party;
+import com.echothree.model.data.party.server.entity.PartyAlias;
+import com.echothree.model.data.party.server.entity.PartyAliasType;
+import com.echothree.model.data.party.server.factory.PartyAliasFactory;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.model.data.user.server.entity.UserVisit;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetPartyAliasesCommand
-        extends BaseSimpleCommand<GetPartyAliasesForm> {
+        extends BaseMultipleEntitiesCommand<PartyAlias, GetPartyAliasesForm> {
     
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                new FieldDefinition("PartyName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+        FORM_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("PartyName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("PartyTypeName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("PartyAliasTypeName", FieldType.ENTITY_NAME, false, null, null)
+        );
     }
     
     /** Creates a new instance of GetPartyAliasesCommand */
     public GetPartyAliasesCommand(UserVisitPK userVisitPK, GetPartyAliasesForm form) {
-        super(userVisitPK, form, new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        super(userVisitPK, form, new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
-                        new SecurityRoleDefinition(PartyAliasUtil.getInstance().getSecurityRoleGroupNameByPartySpec(form), SecurityRoles.List.name())
-                        )))
-                ))), FORM_FIELD_DEFINITIONS, false);
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(PartyAliasUtil.getInstance().getSecurityRoleGroupNameBySpecs(form, form), SecurityRoles.List.name())
+                ))
+        )), FORM_FIELD_DEFINITIONS, false);
     }
-    
+
+    Party party;
+    PartyAliasType partyAliasType;
+
     @Override
-    protected BaseResult execute() {
-        var partyControl = Session.getModelController(PartyControl.class);
-        GetPartyAliasesResult result = PartyResultFactory.getGetPartyAliasesResult();
-        String partyName = form.getPartyName();
-        Party party = partyControl.getPartyByName(partyName);
+    protected Collection<PartyAlias> getEntities() {
+        var partyName = form.getPartyName();
+        var partyTypeName = form.getPartyTypeName();
+        var partyAliasTypeName = form.getPartyAliasTypeName();
+        // Must specify either PartyName or PartyTypeName + PartyAliasTypeName
+        var parameterOption1 = (partyName != null) && (partyTypeName == null) && (partyAliasTypeName == null );
+        var parameterOption2 = (partyName == null) && (partyTypeName != null) && (partyAliasTypeName != null );
+        var parameterCount = (parameterOption1 ? 1 : 0) + (parameterOption2 ? 1 : 0);
+        Collection<PartyAlias> partyAliases = null;
 
-        if(party != null) {
-            UserVisit userVisit = getUserVisit();
+        if(parameterCount == 1) {
+            var partyControl = Session.getModelController(PartyControl.class);
 
-            result.setParty(partyControl.getPartyTransfer(userVisit, party));
-            result.setPartyAliases(partyControl.getPartyAliasTransfersByParty(userVisit, party));
+            if(parameterOption1) {
+                party = PartyLogic.getInstance().getPartyByName(this, form.getPartyName());
+
+                if(!hasExecutionErrors()) {
+                    partyAliases = partyControl.getPartyAliasesByParty(party);
+                }
+            } else {
+                partyAliasType = PartyAliasTypeLogic.getInstance().getPartyAliasTypeByName(this, partyTypeName, partyAliasTypeName);
+
+                if(!hasExecutionErrors()) {
+                    partyAliases = partyControl.getPartyAliasesByPartyAliasType(partyAliasType);
+                }
+            }
         } else {
-            addExecutionError(ExecutionErrors.UnknownPartyName.name(), partyName);
+            addExecutionError(ExecutionErrors.InvalidParameterCount.name());
+        }
+
+        return partyAliases;
+    }
+
+    @Override
+    protected BaseResult getResult(Collection<PartyAlias> entities) {
+        var result = PartyResultFactory.getGetPartyAliasesResult();
+
+        if(entities != null) {
+            var partyControl = Session.getModelController(PartyControl.class);
+
+            if(session.hasLimit(PartyAliasFactory.class)) {
+                if(party != null) {
+                    result.setPartyAliasCount(partyControl.countPartyAliasesByParty(party));
+                } else {
+                    result.setPartyAliasCount(partyControl.countPartyAliasesByPartyAliasType(partyAliasType));
+                }
+            }
+
+            if(party != null) {
+                result.setParty(partyControl.getPartyTransfer(getUserVisit(), party));
+            }
+
+            if(partyAliasType != null) {
+                result.setPartyAliasType(partyControl.getPartyAliasTypeTransfer(getUserVisit(), partyAliasType));
+            }
+
+            result.setPartyAliases(partyControl.getPartyAliasTransfers(getUserVisit(), entities));
         }
 
         return result;
     }
-    
+
 }
