@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2022 Echo Three, LLC
+// Copyright 2002-2024 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -17,40 +17,69 @@
 package com.echothree.control.user.party.server.command;
 
 import com.echothree.control.user.party.common.form.GetPartyTypesForm;
-import com.echothree.control.user.party.common.result.GetPartyTypesResult;
 import com.echothree.control.user.party.common.result.PartyResultFactory;
+import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.party.server.control.PartyControl;
+import com.echothree.model.control.security.common.SecurityRoleGroups;
+import com.echothree.model.control.security.common.SecurityRoles;
+import com.echothree.model.data.party.server.entity.PartyType;
+import com.echothree.model.data.party.server.factory.PartyTypeFactory;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.CommandSecurityDefinition;
+import com.echothree.util.server.control.PartyTypeDefinition;
+import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 
 public class GetPartyTypesCommand
-        extends BaseSimpleCommand<GetPartyTypesForm> {
-    
+        extends BaseMultipleEntitiesCommand<PartyType, GetPartyTypesForm> {
+
+    private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
+                new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.PartyType.name(), SecurityRoles.List.name())
+                ))
+        ));
+
+        FORM_FIELD_DEFINITIONS = List.of();
     }
 
     /** Creates a new instance of GetPartyTypesCommand */
     public GetPartyTypesCommand(UserVisitPK userVisitPK, GetPartyTypesForm form) {
-        super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, false);
+        super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, false);
     }
-    
+
     @Override
-    protected BaseResult execute() {
-        GetPartyTypesResult result = PartyResultFactory.getGetPartyTypesResult();
+    protected Collection<PartyType> getEntities() {
         var partyControl = Session.getModelController(PartyControl.class);
-        
-        result.setPartyTypes(partyControl.getPartyTypeTransfers(getUserVisit()));
-        
+
+        return partyControl.getPartyTypes();
+    }
+
+    @Override
+    protected BaseResult getResult(Collection<PartyType> entities) {
+        var result = PartyResultFactory.getGetPartyTypesResult();
+
+        if(entities != null) {
+            var partyControl = Session.getModelController(PartyControl.class);
+
+            if(session.hasLimit(PartyTypeFactory.class)) {
+                result.setPartyTypeCount(partyControl.countPartyTypes());
+            }
+
+            result.setPartyTypes(partyControl.getPartyTypeTransfers(getUserVisit(), entities));
+        }
+
         return result;
     }
     
