@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2022 Echo Three, LLC
+// Copyright 2002-2024 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -17,49 +17,47 @@
 package com.echothree.control.user.vendor.server.command;
 
 import com.echothree.control.user.vendor.common.form.GetVendorItemForm;
-import com.echothree.control.user.vendor.common.result.GetVendorItemResult;
 import com.echothree.control.user.vendor.common.result.VendorResultFactory;
 import com.echothree.model.control.party.common.PartyTypes;
-import com.echothree.model.control.party.server.control.PartyControl;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.control.vendor.server.control.VendorControl;
-import com.echothree.model.data.party.server.entity.Party;
+import com.echothree.model.control.vendor.server.logic.VendorItemLogic;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.model.data.vendor.server.entity.Vendor;
 import com.echothree.model.data.vendor.server.entity.VendorItem;
-import com.echothree.util.common.message.ExecutionErrors;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseSingleEntityCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class GetVendorItemCommand
-        extends BaseSimpleCommand<GetVendorItemForm> {
+        extends BaseSingleEntityCommand<VendorItem, GetVendorItemForm> {
 
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.VendorItem.name(), SecurityRoles.Review.name())
-                        )))
-                )));
+                ))
+        ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("VendorName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("PartyName", FieldType.ENTITY_NAME, false, null, null),
-                new FieldDefinition("VendorItemName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+                new FieldDefinition("VendorItemName", FieldType.ENTITY_NAME, true, null, null),
+                new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
+                new FieldDefinition("Key", FieldType.KEY, false, null, null),
+                new FieldDefinition("Guid", FieldType.GUID, false, null, null),
+                new FieldDefinition("Ulid", FieldType.ULID, false, null, null)
+        );
     }
 
     /** Creates a new instance of GetVendorItemCommand */
@@ -68,50 +66,18 @@ public class GetVendorItemCommand
     }
 
     @Override
-    protected BaseResult execute() {
-        GetVendorItemResult result = VendorResultFactory.getGetVendorItemResult();
-        String vendorName = form.getVendorName();
-        String partyName = form.getPartyName();
-        var parameterCount = (vendorName == null ? 0 : 1) + (partyName == null ? 0 : 1);
+    protected VendorItem getEntity() {
+        return VendorItemLogic.getInstance().getVendorItemByUniversalSpec(this, form);
+    }
 
-        if(parameterCount == 1) {
+    @Override
+    protected BaseResult getResult(VendorItem entity) {
+        var result = VendorResultFactory.getGetVendorItemResult();
+
+        if(entity != null) {
             var vendorControl = Session.getModelController(VendorControl.class);
-            Vendor vendor = null;
 
-            if(vendorName != null) {
-                vendor = vendorControl.getVendorByName(vendorName);
-
-                if(vendor == null) {
-                    addExecutionError(ExecutionErrors.UnknownVendorName.name(), vendorName);
-                }
-            } else if(partyName != null) {
-                var partyControl = Session.getModelController(PartyControl.class);
-                Party party = partyControl.getPartyByName(partyName);
-
-                if(party != null) {
-                    if(party.getLastDetail().getPartyType().getPartyTypeName().equals(PartyTypes.VENDOR.name())) {
-                        vendor = vendorControl.getVendor(party);
-                    } else {
-                        addExecutionError(ExecutionErrors.InvalidPartyType.name());
-                    }
-                } else {
-                    addExecutionError(ExecutionErrors.UnknownPartyName.name(), partyName);
-                }
-            }
-
-            if(vendor != null) {
-                Party vendorParty = vendor.getParty();
-                String vendorItemName = form.getVendorItemName();
-                VendorItem vendorItem = vendorControl.getVendorItemByVendorPartyAndVendorItemName(vendorParty, vendorItemName);
-
-                if(vendorItem != null) {
-                    result.setVendorItem(vendorControl.getVendorItemTransfer(getUserVisit(), vendorItem));
-                } else {
-                    addExecutionError(ExecutionErrors.UnknownVendorItemName.name(), vendorName, vendorItemName);
-                }
-            }
-        } else {
-            addExecutionError(ExecutionErrors.InvalidParameterCount.name());
+            result.setVendorItem(vendorControl.getVendorItemTransfer(getUserVisit(), entity));
         }
 
         return result;
