@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2022 Echo Three, LLC
+// Copyright 2002-2024 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -17,54 +17,67 @@
 package com.echothree.control.user.vendor.server.command;
 
 import com.echothree.control.user.vendor.common.form.GetVendorTypesForm;
-import com.echothree.control.user.vendor.common.result.GetVendorTypesResult;
 import com.echothree.control.user.vendor.common.result.VendorResultFactory;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.control.vendor.server.control.VendorControl;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.model.data.vendor.server.entity.VendorType;
+import com.echothree.model.data.vendor.server.factory.VendorTypeFactory;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetVendorTypesCommand
-        extends BaseSimpleCommand<GetVendorTypesForm> {
+        extends BaseMultipleEntitiesCommand<VendorType, GetVendorTypesForm> {
     
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.VendorType.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                ))
+        ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of();
     }
     
     /** Creates a new instance of GetVendorTypesCommand */
     public GetVendorTypesCommand(UserVisitPK userVisitPK, GetVendorTypesForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
     @Override
-    protected BaseResult execute() {
+    protected Collection<VendorType> getEntities() {
         var vendorControl = Session.getModelController(VendorControl.class);
-        GetVendorTypesResult result = VendorResultFactory.getGetVendorTypesResult();
-        
-        result.setVendorTypes(vendorControl.getVendorTypeTransfers(getUserVisit()));
-        
+
+        return vendorControl.getVendorTypes();
+    }
+
+    @Override
+    protected BaseResult getResult(Collection<VendorType> entities) {
+        var result = VendorResultFactory.getGetVendorTypesResult();
+
+        if(entities != null) {
+            var vendorControl = Session.getModelController(VendorControl.class);
+
+            if(session.hasLimit(VendorTypeFactory.class)) {
+                result.setVendorTypeCount(vendorControl.countVendorTypes());
+            }
+
+            result.setVendorTypes(vendorControl.getVendorTypeTransfers(getUserVisit(), entities));
+        }
+
         return result;
     }
     
