@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2022 Echo Three, LLC
+// Copyright 2002-2024 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -17,87 +17,76 @@
 package com.echothree.control.user.warehouse.server.command;
 
 import com.echothree.control.user.warehouse.common.form.GetWarehouseForm;
-import com.echothree.control.user.warehouse.common.result.GetWarehouseResult;
 import com.echothree.control.user.warehouse.common.result.WarehouseResultFactory;
 import com.echothree.model.control.core.common.EventTypes;
 import com.echothree.model.control.party.common.PartyTypes;
-import com.echothree.model.control.party.server.control.PartyControl;
+import com.echothree.model.control.security.common.SecurityRoleGroups;
+import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.control.warehouse.server.control.WarehouseControl;
-import com.echothree.model.data.party.server.entity.Party;
-import com.echothree.model.data.party.server.entity.PartyType;
+import com.echothree.model.control.warehouse.server.logic.WarehouseLogic;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.model.data.warehouse.server.entity.Warehouse;
-import com.echothree.util.common.message.ExecutionErrors;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseSingleEntityCommand;
+import com.echothree.util.server.control.CommandSecurityDefinition;
+import com.echothree.util.server.control.PartyTypeDefinition;
+import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class GetWarehouseCommand
-        extends BaseSimpleCommand<GetWarehouseForm> {
-    
+        extends BaseSingleEntityCommand<Warehouse, GetWarehouseForm> {
+
+    private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
-    
+
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
+                new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.Warehouse.name(), SecurityRoles.Review.name())
+                ))
+        ));
+
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("WarehouseName", FieldType.ENTITY_NAME, false, null, null),
-                new FieldDefinition("PartyName", FieldType.ENTITY_NAME, false, null, null)
-                ));
+                new FieldDefinition("PartyName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
+                new FieldDefinition("Key", FieldType.KEY, false, null, null),
+                new FieldDefinition("Guid", FieldType.GUID, false, null, null),
+                new FieldDefinition("Ulid", FieldType.ULID, false, null, null)
+        );
     }
-    
+
     /** Creates a new instance of GetWarehouseCommand */
     public GetWarehouseCommand(UserVisitPK userVisitPK, GetWarehouseForm form) {
-        super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, true);
+        super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
     @Override
-    protected BaseResult execute() {
-        GetWarehouseResult result = WarehouseResultFactory.getGetWarehouseResult();
-        String warehouseName = form.getWarehouseName();
-        String partyName = form.getPartyName();
-        var parameterCount = (warehouseName == null ? 0 : 1) + (partyName == null ? 0 : 1);
-        
-        if(parameterCount == 1) {
-            var warehouseControl = Session.getModelController(WarehouseControl.class);
-            Warehouse warehouse = null;
-            
-            if(warehouseName != null) {
-                warehouse = warehouseControl.getWarehouseByName(warehouseName);
-                
-                if(warehouse == null) {
-                    addExecutionError(ExecutionErrors.UnknownWarehouseName.name(), warehouseName);
-                }
-            } else {
-                var partyControl = Session.getModelController(PartyControl.class);
-                Party party = partyControl.getPartyByName(partyName);
-                
-                if(party != null) {
-                    PartyType partyType = partyControl.getPartyTypeByName(PartyTypes.WAREHOUSE.name());
-                    
-                    if(party.getLastDetail().getPartyType().equals(partyType)) {
-                        warehouse = warehouseControl.getWarehouse(party);
-                    } else {
-                        addExecutionError(ExecutionErrors.InvalidPartyType.name());
-                    }
-                } else {
-                    addExecutionError(ExecutionErrors.UnknownPartyName.name(), partyName);
-                }
-            }
-            
-            if(!hasExecutionErrors()) {
-                result.setWarehouse(warehouseControl.getWarehouseTransfer(getUserVisit(), warehouse));
-                
-                sendEventUsingNames(warehouse.getPartyPK(), EventTypes.READ.name(), null, null, getPartyPK());
-            }
-        } else {
-            addExecutionError(ExecutionErrors.InvalidParameterCount.name());
+    protected Warehouse getEntity() {
+        var entity = WarehouseLogic.getInstance().getWarehouseByUniversalSpec(this, form, true);
+
+        if(entity != null) {
+            sendEvent(entity.getPartyPK(), EventTypes.READ, null, null, getPartyPK());
         }
-        
+
+        return entity;
+    }
+
+    @Override
+    protected BaseResult getResult(Warehouse entity) {
+        var result = WarehouseResultFactory.getGetWarehouseResult();
+
+        if(entity != null) {
+            var warehouseControl = Session.getModelController(WarehouseControl.class);
+
+            result.setWarehouse(warehouseControl.getWarehouseTransfer(getUserVisit(), entity));
+        }
+
         return result;
     }
-    
+
 }
