@@ -1,5 +1,5 @@
 // --------------------------------------------------------------------------------
-// Copyright 2002-2022 Echo Three, LLC
+// Copyright 2002-2024 Echo Three, LLC
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -18,6 +18,9 @@ package com.echothree.control.user.workflow.server.command;
 
 import com.echothree.control.user.workflow.common.form.GetWorkflowDestinationForm;
 import com.echothree.control.user.workflow.common.result.WorkflowResultFactory;
+import com.echothree.model.control.party.common.PartyTypes;
+import com.echothree.model.control.security.common.SecurityRoleGroups;
+import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.control.workflow.server.control.WorkflowControl;
 import com.echothree.model.control.workflow.server.logic.WorkflowDestinationLogic;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
@@ -26,42 +29,49 @@ import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.server.control.BaseSingleEntityCommand;
+import com.echothree.util.server.control.CommandSecurityDefinition;
+import com.echothree.util.server.control.PartyTypeDefinition;
+import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class GetWorkflowDestinationCommand
         extends BaseSingleEntityCommand<WorkflowDestination, GetWorkflowDestinationForm> {
 
-    // No COMMAND_SECURITY_DEFINITION, anyone may execute this command.
+    private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                new FieldDefinition("WorkflowName", FieldType.ENTITY_NAME, true, null, null),
-                new FieldDefinition("WorkflowStepName", FieldType.ENTITY_NAME, true, null, null),
-                new FieldDefinition("WorkflowDestinationName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
+                new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.WorkflowDestination.name(), SecurityRoles.Review.name())
+                ))
+        ));
+
+        FORM_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("WorkflowName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("WorkflowStepName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("WorkflowDestinationName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
+                new FieldDefinition("Key", FieldType.KEY, false, null, null),
+                new FieldDefinition("Guid", FieldType.GUID, false, null, null),
+                new FieldDefinition("Ulid", FieldType.ULID, false, null, null)
+        );
     }
     
     /** Creates a new instance of GetWorkflowDestinationCommand */
     public GetWorkflowDestinationCommand(UserVisitPK userVisitPK, GetWorkflowDestinationForm form) {
-        super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, true);
+        super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
     
     @Override
     protected WorkflowDestination getEntity() {
-        var workflowName = form.getWorkflowName();
-        var workflowStepName = form.getWorkflowStepName();
-        var workflowDestinationName = form.getWorkflowDestinationName();
-
-        return WorkflowDestinationLogic.getInstance().getWorkflowDestinationByName(this, workflowName,
-                workflowStepName, workflowDestinationName);
+        return WorkflowDestinationLogic.getInstance().getWorkflowDestinationByUniversalSpec(this, form, true);
     }
 
     @Override
-    protected BaseResult getTransfer(WorkflowDestination workflowDestination) {
+    protected BaseResult getResult(WorkflowDestination workflowDestination) {
         var result = WorkflowResultFactory.getGetWorkflowDestinationResult();
 
         if(workflowDestination != null) {
